src/styles/toast.scss
/**
 * Created by zhongjx on 2018/11/8.
 */
@import "./common/mixins";

@include b(toast) {
    display: inline-flex;
    align-items: center;
    justify-content: center;
    position: fixed;
    top: 50vh;
    left: 50vw;
    transform: translate(-50%, -100%);
    padding: 90px 60px;
    font-size: 30px;
    color: #fff;
    background: rgba(0, 0, 0, 0.7);
    & p {
        margin: 0;
    }
    @include m(fade-enter-active) {
        transition: opacity .5s;
    }
    @include m(fade-leave-active) {
        transition: opacity .5s;
    }
    @include m(fade-enter) {
        opacity: 0;
    }
    @include m(fade-leave-to) {
        opacity: 0;
    }
}

